# test-MQ

./: .gitignore  CMakeLists.txt  exampleserver.cpp  main.cpp  message.hpp
